--- a/maria/configs/params.yml
+++ b/maria/configs/params.yml
@@ -61,3 +61,4 @@ map:
 
 noise:
   white_noise_level: 1.e-2 # in Kelvin Rayleigh-Jeans equivalent
+  pink_noise_level: 1.e-2 # in Kelvin Rayleigh-Jeans equivalent amplitude in fourier domain
