--- a/maria/configs/pointings.yml
+++ b/maria/configs/pointings.yml
@@ -32,6 +32,18 @@ daisy:
     miss_factor: 0.15
     miss_freq: 1.41
 
+double_circle:
+  description: 'A double circle scan.'
+  pointing_frame: ra_dec
+  pointing_units: degrees
+  scan_pattern: double_circle
+  scan_center: [150., 10]
+  sample_rate: 50
+  scan_options:
+    radius: 2
+    speed: 0.5
+    miss_freq: 10.1
+
 back_and_forth:
   description: 'A back-and-forth scan.'
   start_time: '2022-07-01T08:00:00'
